Some lil changes
The cart and disclaimer were changed a bit

--- a/MartinCruz_Javier/IndieGameViewer_Cart.html
+++ b/MartinCruz_Javier/IndieGameViewer_Cart.html
@@ -45,13 +45,14 @@
                 <!-- Los elementos del carrito se mostrarán aquí dinámicamente -->
             </ul>
             <p><strong>Total:</strong> <span id="total">0.00€</span></p>
-            <p><i>(Ten en cuenta que este apartado SOLO CALCULA EL PRECIO de los juegos en el carrito y no sirve para comprar los juegos seleccionados)</i></p>
         </section>
 
         <section class="informacion">
             <h3>¿Cómo funciona el carrito?</h3>
             <p>El carrito de compras te permite calcular el precio total de los juegos que deseas adquirir. Sin embargo, este proyecto es solo una demostración académica y no realiza compras reales.</p>
             <p>Para comprar los juegos seleccionados, visita las páginas oficiales de los desarrolladores o distribuidores.</p>
+            <p>Si deseas añadir juegos a tu carrito, visita la sección de juegos indie y selecciona los que te interesen.</p>
+            <p>Recuerda que este carrito solo calcula el precio y no tiene funcionalidad de compra.</p>
         </section>
     </main>
 
@@ -64,8 +65,7 @@
 
         <br>
         <div class="disclaimer">
-            <h3>Descargo de Responsabilidad</h3>
-            <p>Ten en cuenta que el carrito de esta página SOLO CALCULA EL PRECIO de los juegos en el carrito y no sirve para comprar los juegos seleccionados</p>
+            <h3>Descargo de Responsabilidad:</h3>
             <p>Este proyecto es un trabajo académico y no tiene fines comerciales.</p>
             <p>Este proyecto fue desarrollado como parte de un curso de Desarrollo Web.</p>
             <p>Los derechos de autor de los juegos mostrados pertenecen a sus respectivos propietarios.</p>
@@ -74,7 +74,10 @@
             <p>El uso de imágenes y nombres de juegos es puramente ilustrativo y no implica ningún tipo de asociación.</p>
             <p>Este proyecto no tiene fines de lucro y se realiza con fines educativos.</p>
             <p>Este proyecto es un trabajo individual y no representa la opinión de ninguna institución.</p>
-            <p>Si tienes alguna pregunta o inquietud, no dudes en ponerte en contacto con el autor.</p>
+            <p>Este proyecto no tiene relación con Steam o Valve Corporation.</p>
+            <p>Las imágenes de los juegos son propiedad de sus respectivos desarrolladores y editores.</p>
+            <p>Este proyecto no tiene la intención de infringir ningún derecho de autor o marca registrada.</p>
+            <p>El uso de imágenes y nombres de juegos es solo para fines educativos y de demostración.</p>
             <p>El logo fue creado por ChatGPT.</p>
             <p>Gracias por tu comprensión y apoyo.</p>
             <p>¡Disfruta de los juegos!</p>
