--- a/MartinCruz_Javier/IndieGameViewer_Cart.html
+++ b/MartinCruz_Javier/IndieGameViewer_Cart.html
@@ -49,10 +49,15 @@
 
         <section class="informacion">
             <h3>¿Cómo funciona el carrito?</h3>
-            <p>El carrito de compras te permite calcular el precio total de los juegos que deseas adquirir. Sin embargo, este proyecto es solo una demostración académica y no realiza compras reales.</p>
+            <p>El carrito de compras te permite calcular el precio total de los juegos que deseas adquirir. </p>
+            <p>Sin embargo, este proyecto es solo una demostración académica y <b>no realiza compras reales</b>.</p>
             <p>Para comprar los juegos seleccionados, visita las páginas oficiales de los desarrolladores o distribuidores.</p>
+            <p>(Los enlaces a sus respectivas páginas en Steam están en la página principal, por si quieres visitarlos desde ahí)</p>
+                <br>
             <p>Si deseas añadir juegos a tu carrito, visita la sección de juegos indie y selecciona los que te interesen.</p>
-            <p>Recuerda que este carrito solo calcula el precio y no tiene funcionalidad de compra.</p>
+            <p>Si deseas eliminar un juego de tu carrito, simplemente haz clic en el botón "Eliminar" junto al juego correspondiente.</p>
+                <br>
+            <p><b><i>¡Gracias por visitar y usar IndieGameViewer!</i></b></p>
         </section>
     </main>
 
