Trying to make the xsl work
(At least I know how to open it now-)

Note: I NEED TO CONNECT THE SCRIPT TO THE XSL

--- a/MartinCruz_Javier/IndieGameViewer.html
+++ b/MartinCruz_Javier/IndieGameViewer.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <select id="tema-color">
-                <option value="dark">Tema oscuro</option>
                 <option value="light">Tema claro</option>
+                <option value="dark">Tema oscuro</option>
                 <option value="vacio">Tema vacío</option>
                 <option value="dorado">Tema dorado</option>
             </select>
@@ -1304,7 +1304,7 @@
         <div class="logo">
             <img src="img/logo.png" alt="Logo de la Empresa" width="100">
         </div>
-        <p>&copy; 2025 IndieGameViewer</p>
+        <p>2025 IndieGameViewer</p>
         <p>Creado por: Javier Martín Cruz (1ºDAW)</p>
 
         <br>
