--- a/cart.html
+++ b/cart.html
@@ -44,7 +44,7 @@
             <input type="text" id="nombre" required>
             <label for="edad">Edad:</label>
             <input type="number" id="edad" required>
-            <button type="submit">Guardar</button>
+            <button type="submit">Confirmar</button>
         </form>
     </div>
 
